--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="executive-summary" itemprop="description">
-          <p>Hi, I am a Student at ITESM CEM, in Mexico City. I have knowledge of programming languages as Java, Python, C, JavaScript, Ruby, Swift and more. Also I know how to work with some awesome tools like Git, Sublime Text and so on.</p>
+          <p>Hi, I'm a Student at ITESM CEM, in Mexico City. I have knowledge of programming languages as Java, Python, C, JavaScript, Ruby, Swift and more. Also I know how to work with some awesome tools like Git, Sublime Text and so on.</p>
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
