Changes CV Info about Logyt

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -51,7 +51,9 @@
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name"><a href="http://logyt.com/">Logyt</a></h3>
           <h4 class="resume-item-details" itemprop="description">Full Stack Developer &bull; May, 2016 &mdash; Present</h4>
-          <p class="resume-item-copy">Responsible of the Backend (Python & Django), Frontend development (Javascript, CSS, HTML) and online hosting (Google Cloud Servers using Google App Engine) of different platforms for trucks routing around Mexico.</p>
+          <p class="resume-item-copy">Responsible of the Backend (Python & Django), Frontend development (Javascript, CSS, HTML) and online hosting (Google Cloud Servers using Google App Engine) of different platforms which design delivery routes for trucks across Mexico.</p>
+
+          <p class="resume-item-copy">Implemented the Security and the Authentication for different kind of users/jobs inside the platform to make it only accessible for them.</p>
           <!--<ul class="resume-item-list">
             <li>Ate lots of donuts</li>
             <li>Fell asleep rarely</li>
@@ -270,6 +272,7 @@
             <li><a href="https://arturoaviles.github.io/grep_javascript/">Javascript GREP Search</a></li>
             <li><a href="https://github.com/arturoaviles/Coj_EncodingDecoding_1662">Java Program Solution COJ 1662</a></li>
             <li><a href="https://github.com/arturoaviles/Crawl_Web_Python">Python Web Crawler</a></li>
+            <li><a href="http://qb3d.com.mx/">Web Project</a></li>
             <li><a href="https://github.com/arturoaviles/openWithChrome">Open Chrome from UNIX/Terminal</a></li>
           </ul>
         </div>
