Change format in the text, move Python to Experience of 2 years, add Django Auth System to Projects

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -51,9 +51,11 @@
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name"><a href="http://logyt.com/">Logyt</a></h3>
           <h4 class="resume-item-details" itemprop="description">Full Stack Developer &bull; May, 2016 &mdash; Present</h4>
-          <p class="resume-item-copy">Responsible of the Backend (Python & Django), Frontend development (Javascript, CSS, HTML) and online hosting (Google Cloud Servers using Google App Engine) of different platforms which design delivery routes for trucks across Mexico.</p>
+          <p class="resume-item-copy">• Responsible of the Backend (Python & Django), Frontend development (Javascript, CSS, HTML) and online hosting (Google Cloud Servers using Google App Engine) of different platforms which design delivery routes for trucks across Mexico.</p>
 
-          <p class="resume-item-copy">Implemented the Security and the Authentication for different kind of users/jobs inside the platform to make it only accessible for them.</p>
+          <p class="resume-item-copy">• Implemented the Security and the Authentication for different kind of users/jobs inside the platform to make it only accessible for them.</p>
+
+          <p class="resume-item-copy">• Successfully developed, executed and managed data processes which interact with Google Cloud Storage.</p>
           <!--<ul class="resume-item-list">
             <li>Ate lots of donuts</li>
             <li>Fell asleep rarely</li>
@@ -68,7 +70,7 @@
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name"><a href="http://ment.com.mx/">Ment</a></h3>
           <h4 class="resume-item-details" itemprop="description">Frontend Developer &bull; Aug, 2015 &mdash; Present</h4>
-          <p class="resume-item-copy">Working in a team devoted to create solutions for businesses making use of technologies to achieve responsive design, more interactive, optimized and well-crafted apps & websites. Ruby on Rails, Javascript, CSS and HTML usage is part of my work.</p>
+          <p class="resume-item-copy">• Working in a team devoted to create solutions for businesses making use of technologies to achieve responsive design, more interactive, optimized and well-crafted apps & websites. Ruby on Rails, Javascript, CSS and HTML usage is part of my work.</p>
 
         </div><!-- end of resume-item -->
 
@@ -76,7 +78,7 @@
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name"><a href="http://aiesec.org/">AIESEC</a></h3>
           <h4 class="resume-item-details" itemprop="description">OGIP Manager &bull; Jan, 2014 &mdash; Jan, 2015</h4>
-          <p class="resume-item-copy">Enabled young people to gain relevant skills for their future careers by working within a global environment within small to medium sized businesses, multi-national corporations, and NGO's with internships ranging from 2-18 months.</p>
+          <p class="resume-item-copy">• Enabled young people to gain relevant skills for their future careers by working within a global environment within small to medium sized businesses, multi-national corporations, and NGO's with internships ranging from 2-18 months.</p>
 
         </div><!-- end of resume-item -->
 
@@ -113,13 +115,13 @@
         <div class="resume-item">
           <h3 class="resume-item-title">Mexican Red Cross X-Ray iOS App</h3>
           <h4 class="resume-item-details">Swift Developer &bull; Jan, 2016 &mdash; May, 2016</h4>
-          <p class="resume-item-copy">Leader in a team of 5 developers. Responsible of creating and connecting the App to the Cloud using Dropbox in need of a faster way of sharing X-Ray results between doctors.</p>
+          <p class="resume-item-copy">• Leader in a team of 5 developers. Responsible of creating and connecting the App to the Cloud using Dropbox in need of a faster way of sharing X-Ray results between doctors.</p>
         </div>
 
         <div class="resume-item">
           <h3 class="resume-item-title"><a href="https://play.google.com/store/apps/details?id=com.castilla.eduardo.lightbulbs&hl=en">Lightbulbs Android Game</a></h3>
           <h4 class="resume-item-details">Java Developer &bull; Jan, 2015 &mdash; May, 2015</h4>
-          <p class="resume-item-copy">Creator of the idea and mechanics of the game. In charge of coding the menu and levels of the game (Worked w/ another programmer, two graphic designers & one music engineer).</p>
+          <p class="resume-item-copy">• Creator of the idea and mechanics of the game. In charge of coding the menu and levels of the game (Worked w/ another programmer, two graphic designers & one music engineer).</p>
         </div>
 
       </section>
@@ -142,11 +144,11 @@
               <td><p class="resume-item-copy">6 years</p></td>
             </tr>
             <tr>  
-              <td><p class="resume-item-copy">Java</p></td>
+              <td><p class="resume-item-copy">Java, Python</p></td>
               <td><p class="resume-item-copy">2 years</p></td>
             </tr>
             <tr>
-              <td><p class="resume-item-copy">Python, C, Ruby, MySql, PHP</p></td>
+              <td><p class="resume-item-copy">C, Ruby, MySql, PHP</p></td>
               <td><p class="resume-item-copy">1 year</p></td>
             </tr>
             <tr>
@@ -269,6 +271,7 @@
 
         <div class="resume-item">
           <ul class="resume-item-list">
+            <li><a href="https://arturoaviles.github.io/djangosecurelogin/">Django Auth Login</a></li>
             <li><a href="https://arturoaviles.github.io/grep_javascript/">Javascript GREP Search</a></li>
             <li><a href="https://github.com/arturoaviles/Coj_EncodingDecoding_1662">Java Program Solution COJ 1662</a></li>
             <li><a href="https://github.com/arturoaviles/Crawl_Web_Python">Python Web Crawler</a></li>
