Edit Django Auth System URL because last was not correct

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -271,7 +271,7 @@
 
         <div class="resume-item">
           <ul class="resume-item-list">
-            <li><a href="https://arturoaviles.github.io/djangosecurelogin/">Django Auth Login</a></li>
+            <li><a href="https://github.com/arturoaviles/djangosecurelogin/">Django Auth Login</a></li>
             <li><a href="https://arturoaviles.github.io/grep_javascript/">Javascript GREP Search</a></li>
             <li><a href="https://github.com/arturoaviles/Coj_EncodingDecoding_1662">Java Program Solution COJ 1662</a></li>
             <li><a href="https://github.com/arturoaviles/Crawl_Web_Python">Python Web Crawler</a></li>
