--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -51,11 +51,13 @@
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name"><a href="http://logyt.com/">Logyt</a></h3>
           <h4 class="resume-item-details" itemprop="description">Full Stack Developer &bull; May, 2016 &mdash; Present</h4>
-          <p class="resume-item-copy">• Responsible of the Backend (Python & Django), Frontend development (Javascript, CSS, HTML) and online hosting (Google Cloud Servers using Google App Engine) of different platforms which design delivery routes for trucks across Mexico.</p>
+          <p class="resume-item-copy">• Responsible of the Backend (Python, Django, Databases), Frontend development (Javascript, CSS, HTML) and online hosting (Google Cloud Servers using Google App Engine) of different platforms which design delivery routes for trucks across Mexico.</p>
 
           <p class="resume-item-copy">• Implemented the Security and the Authentication for different kind of users/jobs inside the platform to make it only accessible for them.</p>
 
           <p class="resume-item-copy">• Successfully developed, executed and managed data processes which interact with Google Cloud Storage.</p>
+
+          <p class="resume-item-copy">• Elaborated code which run 24/7 inside servers to accomplish processes inside the company.</p>
           <!--<ul class="resume-item-list">
             <li>Ate lots of donuts</li>
             <li>Fell asleep rarely</li>
