Edit Work Experience and Education

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -49,8 +49,17 @@
 
         <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
+          <h3 class="resume-item-title" itemprop="name"><a href="http://ment.com.mx/">Ment</a></h3>
+          <h4 class="resume-item-details" itemprop="description">Frontend Developer &bull; Aug, 2015 &mdash; Present</h4>
+          <p class="resume-item-copy">• Working in a team devoted to create solutions for businesses making use of technologies to achieve responsive design, more interactive, optimized and well-crafted apps & websites. Ruby on Rails, Javascript, CSS and HTML usage is part of my work.</p>
+
+        </div><!-- end of resume-item -->
+
+        
+        <!-- another resume item -->
+        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name"><a href="http://logyt.com/">Logyt</a></h3>
-          <h4 class="resume-item-details" itemprop="description">Full Stack Developer &bull; May, 2016 &mdash; Present</h4>
+          <h4 class="resume-item-details" itemprop="description">Full Stack Developer &bull; May, 2016 &mdash; Aug, 2016</h4>
           <p class="resume-item-copy">• Responsible of the Backend (Python, Django, Databases), Frontend development (Javascript, CSS, HTML) and online hosting (Google Cloud Servers using Google App Engine) of different platforms which design delivery routes for trucks across Mexico.</p>
 
           <p class="resume-item-copy">• Implemented the Security and the Authentication for different kind of users/jobs inside the platform to make it only accessible for them.</p>
@@ -67,14 +76,7 @@
           -->
 
         </div><!-- end of resume-item -->
-
-        <!-- another resume item -->
-        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name"><a href="http://ment.com.mx/">Ment</a></h3>
-          <h4 class="resume-item-details" itemprop="description">Frontend Developer &bull; Aug, 2015 &mdash; Present</h4>
-          <p class="resume-item-copy">• Working in a team devoted to create solutions for businesses making use of technologies to achieve responsive design, more interactive, optimized and well-crafted apps & websites. Ruby on Rails, Javascript, CSS and HTML usage is part of my work.</p>
-
-        </div><!-- end of resume-item -->
+        
 
         <!-- by now you're getting the picture... -->
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
@@ -99,6 +101,12 @@
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/CollegeOrUniversity">
           <h3 class="resume-item-title" itemprop="name">Instituto Tecnlógico y de Estudios Superiores de Monterrey</h3>
           <h4 class="resume-item-details" itemprop="description">B.S. Computer Science &bull; Jun, 2013 &mdash; Dec, 2017</h4>
+          <!--<p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>-->
+        </div>
+
+        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name">University of Ontario Institute of Technology</h3>
+          <h4 class="resume-item-details" itemprop="description">Exchange Semester &bull; Sep, 2016 &mdash; Dec, 2016</h4>
           <!--<p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>-->
         </div>
 
