--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -162,7 +162,7 @@
               <td><p class="resume-item-copy">1 year</p></td>
             </tr>
             <tr>
-              <td><p class="resume-item-copy">Swift, Ruby on Rails & Django</p></td>
+              <td><p class="resume-item-copy">Swift, NodeJS, Ajax, Ruby on Rails & Django</p></td>
               <td><p class="resume-item-copy">6 months</p></td>
             </tr>
           </table>
