Add Nearshore to Experience

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -49,9 +49,17 @@
 
         <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
+          <h3 class="resume-item-title" itemprop="name"><a href="http://nearshoremx.com/">Nearshore Delivery Solutions</a></h3>
+          <h4 class="resume-item-details" itemprop="description">Software Developer &bull; Mar, 2017 &mdash; Present</h4>
+          <p class="resume-item-copy">• Using Watson, Bluemix, Cloud Foundry and NodeJS to create cognitive solutions that make use of neuronal networks which allows the computer to learn (machine learning) and make more intelligent decisions.</p>
+
+        </div><!-- end of resume-item -->
+
+
+        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name"><a href="http://ment.com.mx/">Ment</a></h3>
-          <h4 class="resume-item-details" itemprop="description">Frontend Developer &bull; Aug, 2015 &mdash; Present</h4>
-          <p class="resume-item-copy">• Working in a team devoted to create solutions for businesses making use of technologies to achieve responsive design, more interactive, optimized and well-crafted apps & websites. Ruby on Rails, Javascript, CSS and HTML usage is part of my work.</p>
+          <h4 class="resume-item-details" itemprop="description">Frontend Developer &bull; Aug, 2015 &mdash; Mar, 2017</h4>
+          <p class="resume-item-copy">• Worked in a team devoted to create solutions for businesses making use of technologies to achieve responsive design, more interactive, optimized and well-crafted apps & websites. Ruby on Rails, Javascript, CSS and HTML usage was part of my work.</p>
 
         </div><!-- end of resume-item -->
 
