Update Nearshore summary

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -51,7 +51,7 @@
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name"><a href="http://nearshoremx.com/">Nearshore Delivery Solutions</a></h3>
           <h4 class="resume-item-details" itemprop="description">Software Developer &bull; Mar, 2017 &mdash; Present</h4>
-          <p class="resume-item-copy">• Using Watson, Bluemix, Cloud Foundry and NodeJS to create cognitive solutions that make use of neuronal networks which allows the computer to learn (machine learning) and make more intelligent decisions.</p>
+          <p class="resume-item-copy">• Using Watson, Bluemix, Cloud Foundry and NodeJS to create cognitive solutions that make use of neuronal networks which allows the computer to learn (machine learning) and bring more intelligent decisions.</p>
 
         </div><!-- end of resume-item -->
 
