Update Nearshore Details

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -51,7 +51,8 @@
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name"><a href="http://nearshoremx.com/">Nearshore Delivery Solutions</a></h3>
           <h4 class="resume-item-details" itemprop="description">Software Developer &bull; Mar, 2017 &mdash; Present</h4>
-          <p class="resume-item-copy">• Using Watson, Bluemix, Cloud Foundry and NodeJS to create cognitive solutions that make use of neuronal networks which allows the computer to learn (machine learning) and bring more intelligent decisions to daily business processes.</p>
+          <p class="resume-item-copy">• Using IBM Bluemix services as Watson, Conversation, Tone Analizer, Visual Recognition, with Cloud Foundry and NodeJS, and Google API.ai to create cognitive solutions that make use of neuronal networks which allows the computer to learn (machine learning) and bring more intelligent decisions to daily business processes.</p>
+          <p class="resume-item-copy">• Using Python & Virtualenv to collect information from the web (Web Crawling) while mantaining a control of my developer environment dependencies versions.</p>
 
         </div><!-- end of resume-item -->
 
