Erase Aiesec from Experience Section because it already appears in Associations

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -87,13 +87,14 @@
         </div><!-- end of resume-item -->
         
 
-        <!-- by now you're getting the picture... -->
+        <!-- by now you're getting the picture... 
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
           <h3 class="resume-item-title" itemprop="name"><a href="http://aiesec.org/">AIESEC</a></h3>
           <h4 class="resume-item-details" itemprop="description">OGIP Manager &bull; Jan, 2014 &mdash; Jan, 2015</h4>
           <p class="resume-item-copy">• Enabled young people to gain relevant skills for their future careers by working within a global environment within small to medium sized businesses, multi-national corporations, and NGO's with internships ranging from 2-18 months.</p>
 
-        </div><!-- end of resume-item -->
+        </div> end of resume-item 
+        -->
 
       </section>
       <!-- end Experience -->
