--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -6,18 +6,25 @@
   <body class="theme-{% if site.resume_theme %}{{ site.resume_theme }}{% endif %}">
 
     <div class="wrapper" itemscope itemtype="http://schema.org/Person">
+      <meta itemprop="telephone" content="{{ site.resume_contact_telephone }}"/>
+      <meta itemprop="address" content="{{ site.resume_contact_address }}"/>
 
       <header class="page-header">
 
         <!-- You can turn off the avatar in _config.yml by setting to false -->
         {% if site.resume_avatar == 'true' %}
-        <img src="images/avatar.jpg" alt="my photo" class="avatar" itemprop="image">
+        <img src="images/avatar.jpg" alt="my photo" class="avatar no-print" itemprop="image">
         {% endif %}
 
         <!-- Your name is defined in the _config.yml file -->
         <h1 class="header-name" itemprop="name">{{ site.resume_name }}</h1>
 
-        <div class="title-bar">
+        <!-- Contact buttons don't work in print, configure in the _config.yml file, remove "print-only" to display always. -->
+        <div class="header-contact-info print-only">
+          <p>{{ site.resume_header_contact_info }}</p>
+        </div>
+
+        <div class="title-bar no-print">
 
           <!-- Your title is also defined in the _config.yml file -->
           <h2 class="header-title" itemprop="jobTitle">{{ site.resume_title }}</h2>
@@ -26,14 +33,14 @@
           {% include icon-links.html %}
         </div>
 
-        <div class="executive-summary" itemprop="description">
-          <p>Hi, I'm a Student at ITESM CEM, in Mexico City. I have knowledge of programming languages as Java, Python, C, JavaScript, Ruby, Swift and more. Also I know how to work with some awesome tools like Git, Sublime Text and so on.</p>
+        <div class="executive-summary no-print" itemprop="description">
+          {{ site.resume_header_intro }}
         </div>
 
         {% if site.resume_looking_for_work == 'yes' %}
-        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button" itemprop="email">Contact me</a>
+        <a href="mailto:{{ site.resume_contact_email }}" class="contact-button no-print" itemprop="email">Contact me</a>
         {% elsif site.resume_looking_for_work == 'no' %}
-        <a class="contact-button not-looking">I'm not looking for work right now.</a>
+        <a class="contact-button not-looking no-print">I'm not looking for work right now.</a>
         {% else %}
         {% endif %}
 
@@ -47,102 +54,54 @@
           <h2>Experience</h2>
         </header>
 
-        <!-- Duplicate these resume-item elements and edit accordingly for each job you want to add here -->
+        {% for job in site.data.experience %}
         <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name"><a href="http://nearshoremx.com/">Nearshore Delivery Solutions</a></h3>
-          <h4 class="resume-item-details" itemprop="description">Software Developer &bull; Mar, 2017 &mdash; Present</h4>
-          <p class="resume-item-copy">• Using IBM Bluemix services as Watson, Conversation, Tone Analizer, Visual Recognition, with Cloud Foundry and NodeJS, and Google API.ai to create cognitive solutions that make use of neuronal networks which allows the computer to learn (machine learning) and bring more intelligent decisions to daily business processes.</p>
-          <p class="resume-item-copy">• Using Python & Virtualenv to collect information from the web (Web Crawling) while mantaining a control of my developer environment dependencies versions.</p>
-
+          <h3 class="resume-item-title" itemprop="name">{{ job.company }}</h3>
+          <h4 class="resume-item-details" itemprop="description">{{ job.position }} &bull; {{ job.duration }}</h4>
+          <p class="resume-item-copy">{{ job.summary }}</p>
         </div><!-- end of resume-item -->
-
-
-        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name"><a href="http://ment.com.mx/">Ment</a></h3>
-          <h4 class="resume-item-details" itemprop="description">Frontend Developer &bull; Aug, 2015 &mdash; Mar, 2017</h4>
-          <p class="resume-item-copy">• Worked in a team devoted to create solutions for businesses making use of technologies to achieve responsive design, more interactive, optimized and well-crafted apps & websites. Ruby on Rails, Javascript, CSS and HTML usage was part of my work.</p>
-
-        </div><!-- end of resume-item -->
-
-        
-        <!-- another resume item -->
-        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name"><a href="http://logyt.com/">Logyt</a></h3>
-          <h4 class="resume-item-details" itemprop="description">Full Stack Developer &bull; May, 2016 &mdash; Aug, 2016</h4>
-          <p class="resume-item-copy">• Responsible of the Backend (Python, Django, Databases), Frontend development (Javascript, CSS, HTML) and online hosting (Google Cloud Servers using Google App Engine) of different platforms which design delivery routes for trucks across Mexico.</p>
-
-          <p class="resume-item-copy">• Implemented the Security and the Authentication for different kind of users/jobs inside the platform to make it only accessible for them.</p>
-
-          <p class="resume-item-copy">• Successfully developed, executed and managed data processes which interact with Google Cloud Storage.</p>
-
-          <p class="resume-item-copy">• Elaborated code which run 24/7 inside servers to accomplish processes inside the company.</p>
-          <!--<ul class="resume-item-list">
-            <li>Ate lots of donuts</li>
-            <li>Fell asleep rarely</li>
-            <li>Left promptly at end of day (sometimes earlier)</li>
-          </ul>
-          <p class="resume-item-copy">If you're going to copy paste markup, or edit it, just be sure to keep the appropriate classnames on your new elements for styling purposes.</p>
-          -->
-
-        </div><!-- end of resume-item -->
-        
-
-        <!-- by now you're getting the picture... 
-        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
-          <h3 class="resume-item-title" itemprop="name"><a href="http://aiesec.org/">AIESEC</a></h3>
-          <h4 class="resume-item-details" itemprop="description">OGIP Manager &bull; Jan, 2014 &mdash; Jan, 2015</h4>
-          <p class="resume-item-copy">• Enabled young people to gain relevant skills for their future careers by working within a global environment within small to medium sized businesses, multi-national corporations, and NGO's with internships ranging from 2-18 months.</p>
-
-        </div> end of resume-item 
-        -->
+        {% endfor %}
 
       </section>
       <!-- end Experience -->
       {% endif %}
 
+
       {% if site.resume_section_education %}
       <!-- begin Education -->
       <section class="content-section">
-
         <header class="section-header">
           <h2>Education</h2>
         </header>
 
-        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">Instituto Tecnlógico y de Estudios Superiores de Monterrey</h3>
-          <h4 class="resume-item-details" itemprop="description">B.S. Computer Science &bull; Jun, 2013 &mdash; Dec, 2017</h4>
-          <!--<p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>-->
+        {% for education in site.data.education %}
+        <div class="resume-item" itemscope itemprop="alumniOf" itemtype="http://schema.org/CollegeOrUniversity">
+          <h3 class="resume-item-title" itemprop="name">{{ education.uni }}</h3>
+          <h4 class="resume-item-details group" itemprop="description">{{ education.degree }} &bull; {{ education.year }}</h4>
+          <h5 class="resume-item-details award-title" itemprop="description">{{ education.awards }}</h5>
+          <p class="resume-item-copy">{{ education.summary }}</p>
         </div>
-
-        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/CollegeOrUniversity">
-          <h3 class="resume-item-title" itemprop="name">University of Ontario Institute of Technology</h3>
-          <h4 class="resume-item-details" itemprop="description">Exchange Semester &bull; Sep, 2016 &mdash; Dec, 2016</h4>
-          <!--<p class="resume-item-copy">If you had any meaningful roles at college, feel free to write about them here.</p>-->
-        </div>
-
+        {% endfor %}
       </section>
       <!-- end Education -->
       {% endif %}
 
+
       {% if site.resume_section_projects %}
       <!-- begin Projects -->
       <section class="content-section">
-
         <header class="section-header">
           <h2>Projects</h2>
         </header>
 
-        <div class="resume-item">
-          <h3 class="resume-item-title">Mexican Red Cross X-Ray iOS App</h3>
-          <h4 class="resume-item-details">Swift Developer &bull; Jan, 2016 &mdash; May, 2016</h4>
-          <p class="resume-item-copy">• Leader in a team of 5 developers. Responsible of creating and connecting the App to the Cloud using Dropbox in need of a faster way of sharing X-Ray results between doctors.</p>
+        {% for project in site.data.projects %}
+        <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+          <meta itemprop="creator" content="{{ site.resume_name }}" itemtype="http://schema.org/Person" />
+          <h3 class="resume-item-title" itemprop="name">{% if project.url %}<a href="{{ project.url }}" itemprop="url">{{ project.project }}</a>{% else %}{{ project.project }}{% endif %}</h3>
+          <h4 class="resume-item-details" itemprop="description">{{ project.role }}  &bull; {{ project.duration }}</h4>
+          <p class="resume-item-copy">{{ project.description }}</p>
         </div>
-
-        <div class="resume-item">
-          <h3 class="resume-item-title"><a href="https://play.google.com/store/apps/details?id=com.castilla.eduardo.lightbulbs&hl=en">Lightbulbs Android Game</a></h3>
-          <h4 class="resume-item-details">Java Developer &bull; Jan, 2015 &mdash; May, 2015</h4>
-          <p class="resume-item-copy">• Creator of the idea and mechanics of the game. In charge of coding the menu and levels of the game (Worked w/ another programmer, two graphic designers & one music engineer).</p>
-        </div>
+        {% endfor %}
 
       </section>
       <!-- end Projects -->
@@ -153,75 +112,14 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Skills & Knowledge</h2>
+          <h2>Skills</h2>
         </header>
-
+        {% for skill in site.data.skills %}
         <div class="resume-item">
-          <h4 class="resume-item-details">Programming Languages</h4>
-          <table>
-            <tr>
-              <td><p class="resume-item-copy">Javascript, CSS, HTML</p></td>
-              <td><p class="resume-item-copy">6 years</p></td>
-            </tr>
-            <tr>  
-              <td><p class="resume-item-copy">Java, Python</p></td>
-              <td><p class="resume-item-copy">2 years</p></td>
-            </tr>
-            <tr>
-              <td><p class="resume-item-copy">C, Ruby, MySql, PHP</p></td>
-              <td><p class="resume-item-copy">1 year</p></td>
-            </tr>
-            <tr>
-              <td><p class="resume-item-copy">Swift, NodeJS, Ruby on Rails & Django</p></td>
-              <td><p class="resume-item-copy">6 months</p></td>
-            </tr>
-          </table>
+          <h4 class="resume-item-details">{{ skill.skill }}</h4>
+          <p class="resume-item-copy">{{ skill.description }}</p>
         </div>
-
-        <div class="resume-item">
-          <h4 class="resume-item-details">Operating Systems</h4>
-          <table>
-            <tr>
-              <td><p class="resume-item-copy">Windows, Linux, Mac, Android & iOS</p></td>
-            </tr>
-          </table>
-        </div>
-
-        <div class="resume-item">
-          <h4 class="resume-item-details">Database</h4>
-          <table>
-            <tr>
-              <td><p class="resume-item-copy">MySql</p></td>
-              <td><p class="resume-item-copy">1 year</p></td>
-            </tr>
-            <tr>
-              <td><p class="resume-item-copy">SQL Server</p></td>
-              <td><p class="resume-item-copy">6 months</p></td>
-            </tr>
-            </table>
-        </div>
-
-        <div class="resume-item">
-          <h4 class="resume-item-details">Other</h4>
-          <table>
-            <tr>
-              <td><p class="resume-item-copy">Git & Github</p></td>
-              <td><p class="resume-item-copy">(Intermediate)</p></td>
-            </tr>
-            <tr>
-              <td><p class="resume-item-copy">Networking</p></td>
-              <td><p class="resume-item-copy">(Intermediate)</p></td>
-            </tr>
-            <tr>
-              <td><p class="resume-item-copy">Sublime Text, UNIX/Terminal</p></td>
-              <td><p class="resume-item-copy">(Advanced)</p></td>
-            </tr>
-            <tr>
-              <td><p class="resume-item-copy">Microsoft Office</p></td>
-              <td><p class="resume-item-copy">10 years</p></td>
-            </tr>
-          </table>
-        </div>
+        {% endfor %}
 
       </section>
       <!-- end Skills -->
@@ -232,26 +130,16 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Languages</h2>
+          <h2>Recognition</h2>
         </header>
 
+        {% for recognition in site.data.recognitions %}
         <div class="resume-item">
-          <h3 class="resume-item-title" itemprop="award">English</h3>
-          <!--<h4 class="resume-item-details">Full professional proficiency.</h4>-->
-          <p class="resume-item-copy">Full professional proficiency.</p>
+          <h3 class="resume-item-title" itemprop="award">{{ recognition.award }}</h3>
+          <h4 class="resume-item-details">{{ recognition.organization }} &bull; {{ recognition.year }}</h4>
+          <p class="resume-item-copy">{{ recognition.summary }}</p>
         </div>
-
-        <div class="resume-item">
-          <h3 class="resume-item-title" itemprop="award">Spanish</h3>
-          <!--<h4 class="resume-item-details">Native proficiency.</h4>-->
-          <p class="resume-item-copy">Native proficiency.</p>
-        </div>
-
-        <div class="resume-item">
-          <h3 class="resume-item-title" itemprop="award">German</h3>
-          <!--<h4 class="resume-item-details">Elementary proficiency.</h4>-->
-          <p class="resume-item-copy">Elementary proficiency.</p>
-        </div>
+        {% endfor %}
 
       </section>
       <!-- end Recognition -->
@@ -265,20 +153,36 @@
           <h2>Associations</h2>
         </header>
 
-        <div class="resume-item">
-          <h3 class="resume-item-title">ACM Student Chapter at ITESM CEM</h3>
-          <h4 class="resume-item-details">Volunteer &bull; Jan, 2015 &mdash; May, 2015</h4>
-          <p class="resume-item-copy">Solved Programming Challenges w/ Online Judges (SPOJ & COJ).</p>
+        {% for association in site.data.associations %}
+        <div class="resume-item" itemscope itemprop="memberOf" itemtype="http://schema.org/Organization">
+          <h3 class="resume-item-title" itemprop="name">{% if association.url %}<a href="{{ association.url }}">{{ association.organization }}</a>{% else %}{{ association.organization }}{% endif %}</h3>
+          <h4 class="resume-item-details" itemprop="description">{{ association.role }} &bull; {{ association.year }}</h4>
+          <p class="resume-item-copy">{{ association.summary }}</p>
         </div>
-
-        <div class="resume-item">
-          <h3 class="resume-item-title"><a href="http://aiesec.org/">AIESEC at ITESM CEM</a></h3>
-          <h4 class="resume-item-details">Volunteer OGIP Manager &bull; Jan, 2014 &mdash; Jan, 2015</h4>
-          <p class="resume-item-copy">Enabled young people to gain relevant skills for their future careers by working within a global environment within small to medium sized businesses, multi-national corporations, and NGO's with internships ranging from 2-18 months.</p>
-        </div>
+        {% endfor %}
 
       </section>
       <!-- end Associations -->
+      {% endif %}
+
+      {% if site.resume_section_interests %}
+      <!-- begin Interests -->
+      <section class="content-section">
+
+        <header class="section-header">
+          <h2>Outside Interests</h2>
+        </header>
+
+        <div class="resume-item">
+          <ul class="resume-item-list">
+            {% for interest in site.data.interests %}
+            <li>{{ interest.description }}</li>
+            {% endfor %}
+          </ul>
+        </div>
+
+      </section>
+      <!-- end Interests -->
       {% endif %}
 
       {% if site.resume_section_links %}
@@ -291,13 +195,9 @@
 
         <div class="resume-item">
           <ul class="resume-item-list">
-            <li><a href="https://github.com/arturoaviles/djangosecurelogin/">Django Auth Login</a></li>
-            <li><a href="https://arturoaviles.github.io/grep_javascript/">Javascript GREP Search</a></li>
-            <li><a href="https://github.com/arturoaviles/Coj_EncodingDecoding_1662">Java Program Solution COJ 1662</a></li>
-            <li><a href="https://github.com/arturoaviles/Crawl_Web_Python">Python Web Crawler</a></li>
-            <li><a href="http://qb3d.com.mx/">Web Project</a></li>
-            <li><a href="https://github.com/arturoaviles/openWithChrome">Open Chrome from UNIX/Terminal</a></li>
-            <li><a href="https://github.com/arturoaviles/supervitamin">Tools I love using</a></li>
+            {% for link in site.data.links %}
+            <li><a href={{ link.url }} itemprop="url">{{ link.description }}</a></li>
+            {% endfor %}
           </ul>
         </div>
 
@@ -305,9 +205,25 @@
       <!-- end Links -->
       {% endif %}
 
+      {% if site.resume_print_social_links %}
+      <!-- begin Print Social Links -->
+      <section class="content-section print-only">
+
+        <header class="section-header">
+          <h2>Social Links</h2>
+        </header>
+
+        <div class="resume-item">
+        {% include print-social-links.html %}
+        </div>
+
+      </section>
+      <!-- end Print Social Links -->
+      {% endif %}
+
       <footer class="page-footer">
-        <p class="footer-line">My email is <a href="mailto:artcastell@gmail.com">artcastell@gmail.com</a></p>
-        <p class="footer-line">Feel free to ask anything. ;-)</p>
+        <p class="footer-line">Made by <a href="http://twitter.com/jglovier">@jglovier</a>. Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
+        <p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>
       </footer>
 
     </div>
