--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -130,7 +130,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Recognition</h2>
+          <h2>Languages</h2>
         </header>
 
         {% for recognition in site.data.recognitions %}
